--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="equations">
         <div class="equation">
           <p>Error de Posición:</p>
-          <p class="math-equation" style="text-align: center;">
+          <p class="math-equation">
 $$ 
 \begin{pmatrix} 
 e_x \\[0.3em]
@@ -80,7 +80,7 @@ $$
         </div>
         <div class="equation">
           <p>Cálculo del Punto de Extensión Dinámica (α):</p>
-          <p class="math-equation" style="text-align: center;">
+          <p class="math-equation">
 $$ 
 p = X_o + l \cdot \cos(\Theta)
 $$
@@ -91,7 +91,7 @@ $$
         </div>
         <div class="equation">
           <p>Acción de Control:</p>
-          <p class="math-equation" style="text-align: center;">
+          <p class="math-equation">
 $$ 
 \begin{pmatrix} 
 V \\[0.3em]
