boton descarga canvas

--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@ $$
     <canvas id="robotCanvas"></canvas>
   </div>
   
+  <!-- Botón para descargar la imagen actual del canvas de la animación -->
+  <div class="download-buttons">
+    <button onclick="downloadCanvas()">Descargar Imagen de la Animación</button>
+  </div>
+  
   <!-- Panel para mostrar información en tiempo real del robot -->
   <div id="robotInfo"></div>
   
