--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@ $$
           <p>Cálculo del Punto de Extensión Dinámica (α):</p>
           <p class="math-equation">
 $$ 
-p = X_o + l \cdot \cos(\Theta)
+p = X_i + l \cdot \cos(\Theta)
 $$
 $$ 
-q = Y_o + l \cdot \sin(\Theta)
+q = Y_i + l \cdot \sin(\Theta)
 $$
           </p>
         </div>
